Layout issue fixed.

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -61,13 +61,12 @@ body {
 		display: block;
 		position: absolute;
 		overflow: hidden;
-		top: 50%;
-		left: 50%;
+		top: (100 - $slideHeight) / 2;
+		left: (100 - $slideWidth) / 2;
 
 		width: $slideWidth;
 		height: $slideHeight;
-		margin-left: -($slideWidth / 2);
-		margin-top: -($slideHeight / 2);
+		margin: 0;
 		padding: 4% 6% 7%;
 
 		@include box-sizing(border-box);
